# steerable-scene-generation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: integration_test.yaml  lint.yaml  unit_test.yaml
configurations/: config.yaml
configurations/algorithm/: scene_diffuser_base.yaml  scene_diffuser_base_continous.yaml  scene_diffuser_base_mixed.yaml  scene_diffuser_diffuscene.yaml  scene_diffuser_flux_transformer.yaml  scene_diffuser_midiffusion.yaml  scene_diffuser_mixed_diffuscene.yaml  scene_diffuser_mixed_flux_transformer.yaml  scene_diffuser_mixed_midiffusion.yaml
configurations/dataset/: scene.yaml
configurations/experiment/: base_experiment.yaml  base_pytorch.yaml  scene_diffusion.yaml
data/metadatas/: breakfast_table_high_clutter.json  breakfast_table_low_clutter.json  combined.json  dimsum_table.json  (+4 more)
scripts/: add_static_object_to_dataset.py  combine_processed_scene_datasets.py  compute_max_dataset_language_tokens.py  concatenate_datasets.py  convert_processed_pkl_to_hf.py  create_dataset_object_num_histogram.py  create_language_annotations.py  create_unnormalized_one_hot_vec_dataset_version.py  evaluate_checkpoints.py  filter_dataset.py  increase_max_num_objects.py  inference_time_search.py  modify_rotation_representation.py  preprocess_greg_scene_data.py  rearrange_complete_scenes.py  render_dataset.py  render_samples_semantic.py  sample_and_find_k_closest_training_examples.py  sample_and_render.py  upload_dataset_to_hf_hub.py  visualize_dataset_scene.py  visualize_drake_directive.py
(+85 files in other folders)
